// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderFurniture reactive glyphs (active variant) > ceilingFan idle markup is pinned 1`] = `
"<g transform="translate(0 0) rotate(0)"><ellipse cx="0" cy="0" rx=45 ry=45
                   fill=#9e9e9e fill-opacity=0.12 stroke=#9e9e9e stroke-width="2" />
        
        <path d=M -3.6 -9 C -9 -20.25 -10.799999999999999 -30.6 -6.300000000000001 -39.6 Q -0.9 -44.1 2.6999999999999997 -38.25 C 5.3999999999999995 -27.9 4.5 -18 2.6999999999999997 -9 Z fill="none" stroke=#9e9e9e stroke-width="2" />
        <path d=M -3.6 -9 C -9 -20.25 -10.799999999999999 -30.6 -6.300000000000001 -39.6 Q -0.9 -44.1 2.6999999999999997 -38.25 C 5.3999999999999995 -27.9 4.5 -18 2.6999999999999997 -9 Z transform="rotate(90)" fill="none" stroke=#9e9e9e stroke-width="2" />
        <path d=M -3.6 -9 C -9 -20.25 -10.799999999999999 -30.6 -6.300000000000001 -39.6 Q -0.9 -44.1 2.6999999999999997 -38.25 C 5.3999999999999995 -27.9 4.5 -18 2.6999999999999997 -9 Z transform="rotate(180)" fill="none" stroke=#9e9e9e stroke-width="2" />
        <path d=M -3.6 -9 C -9 -20.25 -10.799999999999999 -30.6 -6.300000000000001 -39.6 Q -0.9 -44.1 2.6999999999999997 -38.25 C 5.3999999999999995 -27.9 4.5 -18 2.6999999999999997 -9 Z transform="rotate(270)" fill="none" stroke=#9e9e9e stroke-width="2" />
        <circle cx="0" cy="0" r=6.75 fill="none" stroke=#9e9e9e stroke-width="2" /></g>"
`;

exports[`renderFurniture reactive glyphs (active variant) > ceilingLight idle markup is pinned 1`] = `
"<g transform="translate(0 0) rotate(0)"><ellipse cx="0" cy="0" rx=18 ry=18
                   fill=#9e9e9e fill-opacity=0.12 stroke=#9e9e9e stroke-width="2" />
        <circle cx="0" cy="0" r=10.799999999999999 fill="none" stroke=#9e9e9e stroke-width="1.5" opacity="0.7" />
        <line x1="0" y1=-10.799999999999999 x2="0" y2=-15.48 stroke=#9e9e9e stroke-width="1.5" opacity="0.6" />
        <line x1=10.799999999999999 y1="0" x2=15.48 y2="0" stroke=#9e9e9e stroke-width="1.5" opacity="0.6" />
        <line x1="0" y1=10.799999999999999 x2="0" y2=15.48 stroke=#9e9e9e stroke-width="1.5" opacity="0.6" />
        <line x1=-10.799999999999999 y1="0" x2=-15.48 y2="0" stroke=#9e9e9e stroke-width="1.5" opacity="0.6" />
        <circle cx="0" cy="0" r=1.8 fill="none" stroke=#9e9e9e stroke-width="1.5" /></g>"
`;

exports[`renderFurniture reactive glyphs (active variant) > dryer idle markup is pinned 1`] = `
"<g transform="translate(120 80) rotate(0)"><rect x=-30 y=-30 width=60 height=60 rx="4"
                  fill=#9e9e9e fill-opacity=0.12 stroke=#9e9e9e stroke-width="2" />
        <line x1=-26.4 y1=-19.200000000000003 x2=26.4 y2=-19.200000000000003
              stroke=#9e9e9e stroke-width="1.5" opacity="0.7" />
        <circle cx="0" cy=3.5999999999999996 r=18 fill="none" stroke=#9e9e9e stroke-width="2" />
        <circle cx="0" cy=3.5999999999999996 r=8.1
                        fill="none" stroke=#9e9e9e stroke-width="1.5" opacity="0.7" /></g>"
`;

exports[`renderFurniture reactive glyphs (active variant) > fireplace idle markup is pinned 1`] = `
"<g transform="translate(0 0) rotate(0)"><rect x=-30 y=-10 width=60 height=20 rx="4"
                  fill=#9e9e9e fill-opacity=0.12 stroke=#9e9e9e stroke-width="2" />
        <line x1=-15.600000000000001 y1=-10 x2=-15.600000000000001 y2=10
              stroke=#9e9e9e stroke-width="2" />
        <line x1=15.600000000000001 y1=-10 x2=15.600000000000001 y2=10
              stroke=#9e9e9e stroke-width="2" />
        <path d="M -8.4 3.5999999999999996 L -3 -3.5999999999999996 L 0 0.4 L 3 -3.5999999999999996 L 8.4 3.5999999999999996"
              fill="none" stroke=#9e9e9e stroke-width="1.5" opacity="0.8" /></g>"
`;

exports[`renderFurniture reactive glyphs (active variant) > lamp idle markup is pinned 1`] = `
"<g transform="translate(0 0) rotate(0)"><ellipse cx="0" cy="0" rx=20 ry=20
                   fill=#9e9e9e fill-opacity=0.12 stroke=#9e9e9e stroke-width="2" />
        <line x1=5.4 y1=5.4 x2=11.399999999999999 y2=11.399999999999999 stroke=#9e9e9e stroke-width="1.5" opacity="0.6" />
        <line x1=-5.4 y1=5.4 x2=-11.399999999999999 y2=11.399999999999999 stroke=#9e9e9e stroke-width="1.5" opacity="0.6" />
        <line x1=5.4 y1=-5.4 x2=11.399999999999999 y2=-11.399999999999999 stroke=#9e9e9e stroke-width="1.5" opacity="0.6" />
        <line x1=-5.4 y1=-5.4 x2=-11.399999999999999 y2=-11.399999999999999 stroke=#9e9e9e stroke-width="1.5" opacity="0.6" />
        <circle cx="0" cy="0" r=2.8000000000000003 fill="none" stroke=#9e9e9e stroke-width="1.5" /></g>"
`;

exports[`renderFurniture reactive glyphs (active variant) > tv idle markup is pinned 1`] = `
"<g transform="translate(0 0) rotate(0)"><rect x=-25 y=-10 width=50 height=20 rx="4"
                  fill=#9e9e9e fill-opacity=0.12 stroke=#9e9e9e stroke-width="2" /><line x1=-9 y1=10 x2=9 y2=30
                         stroke=#9e9e9e stroke-width="2" /></g>"
`;

exports[`renderFurniture stateStyles tint (smart furniture) > with no resolved style, the markup is pinned to a snapshot (idle byte-identity guard) 1`] = `
"<g transform="translate(120 80) rotate(0)"><rect x=-30 y=-30 width=60 height=60 rx="4"
                  fill=#9e9e9e fill-opacity=0.12 stroke=#9e9e9e stroke-width="2" />
        <line x1=-26.4 y1=-19.200000000000003 x2=26.4 y2=-19.200000000000003
              stroke=#9e9e9e stroke-width="1.5" opacity="0.7" />
        <circle cx="0" cy=3.5999999999999996 r=18 fill="none" stroke=#9e9e9e stroke-width="2" />
        <circle cx=-20.4 cy=-24.6 r=2.6999999999999997
                        fill="none" stroke=#9e9e9e stroke-width="1.5" /></g>"
`;
